@@ -13,7 +13,11 @@ DepVis visualizes dependencies of Java 9 Jigsaw modules as defined in
 (https://www.jcp.org/en/jsr/detail?id=376) and [JEP 261](http://openjdk.java.net/jeps/261). 
 DepVis produces a [GraphViz](http://www.graphviz.org) output file (DOT file) which can be rendered with GraphViz in a separate step.
 
+<<<<<<< HEAD
 Result looks like this (in this case all Java 9 system modules (build b144) are visualized with all relationships, limited to modules with prefix "java.*"):
+=======
+Result looks like this (in this case all Java 9 system modules (build b138) are visualized with all relationships):
+>>>>>>> b8542ae894338b3a863bee85cd255f9bf88cb4b2
 ![Java 9 System Modules](Sample-J9SystemModules.png)
 
 #### DepVis takes into account:
@@ -34,7 +38,7 @@ Result looks like this (in this case all Java 9 system modules (build b144) are 
 
 ### Setup
 1. Clone this repo.
-2. Install a Java 9 JDK with Jigsaw support. DepVis has been tested with b136 as of Sept 20th 2016.
+2. Install a Java 9 JDK with Jigsaw support. DepVis has been tested with b138 as of Sept 2016.
 3. Install GraphViz 2.38.
 4. If running on Windows, install a bash, like for example [Babun](https://babun.github.io/)
 5. Edit file `env.sh` to configure `JAVA_HOME` and `GRAPHVIZ_HOME` (see TODO markers)
@@ -106,8 +110,17 @@ No software is ready, ever ;-) So here are some ideas left (any other feedback v
 - [ ] usage of "opens" in module-info
 
 ### Latest changes
+<<<<<<< HEAD
 #### Migration to b144
 - "requires public" in the module-info is now "requires transitive".
+=======
+#### Migration to b138
+Some CLI options changed:
+-modulesourcepath  -->  --module-source-path
+-addmods           -->  --add-modules
+-mp                -->  --module-path
+- [ ] The keyword  "requires public" in the module-info is now "requires transitive". 
+>>>>>>> b8542ae894338b3a863bee85cd255f9bf88cb4b2
 
 ### Related projects
 Jigsaw examples, see https://github.com/accso/java9-jigsaw-examples : Java 9 Jigsaw modules example suite
